<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.RegisterFragment">

    <EditText
        android:id="@+id/et_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_margin"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/tv_invalid_email_messgae"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_margin="@dimen/view_margin"
        app:layout_constraintBottom_toTopOf="@+id/tv_password_validation_message"
        app:layout_constraintEnd_toEndOf="@+id/tv_invalid_email_messgae"
        app:layout_constraintStart_toStartOf="@+id/tv_invalid_email_messgae"
        app:layout_constraintTop_toBottomOf="@+id/tv_invalid_email_messgae" />

    <EditText
        android:id="@+id/et_password_confirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:layout_margin="@dimen/view_margin"
        app:layout_constraintBottom_toTopOf="@+id/tv_password_confirmation_validation_mesage"
        app:layout_constraintEnd_toEndOf="@+id/tv_password_validation_message"
        app:layout_constraintStart_toStartOf="@+id/tv_password_validation_message"
        app:layout_constraintTop_toBottomOf="@+id/tv_password_validation_message" />

    <Button
        android:id="@+id/btn_send_register_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="@dimen/big_margin"
        android:layout_marginStart="@dimen/view_margin"
        android:layout_marginEnd="@dimen/view_margin"
        android:layout_marginBottom="@dimen/view_margin"
        app:layout_constraintBottom_toTopOf="@+id/tv_or"
        app:layout_constraintEnd_toEndOf="@+id/tv_password_confirmation_validation_mesage"
        app:layout_constraintStart_toStartOf="@+id/tv_password_confirmation_validation_mesage"
        app:layout_constraintTop_toBottomOf="@+id/tv_password_confirmation_validation_mesage" />

    <Button
        android:id="@+id/btn_open_login_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:text="@string/login"
        android:textColor="@color/primary"
        android:layout_margin="@dimen/view_margin"
        android:padding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_or"
        app:layout_constraintStart_toStartOf="@+id/tv_or"
        app:layout_constraintTop_toBottomOf="@+id/tv_or" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_invalid_email_messgae"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toTopOf="@+id/et_password"
        app:layout_constraintEnd_toEndOf="@+id/et_email"
        app:layout_constraintStart_toStartOf="@+id/et_email"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        tools:text="email validation" />

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:layout_margin="@dimen/view_margin"
        app:layout_constraintBottom_toTopOf="@+id/btn_open_login_fragment"
        app:layout_constraintEnd_toEndOf="@+id/btn_send_register_request"
        app:layout_constraintStart_toStartOf="@+id/btn_send_register_request"
        app:layout_constraintTop_toBottomOf="@+id/btn_send_register_request" />

    <TextView
        android:id="@+id/tv_password_validation_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/et_password_confirmation"
        app:layout_constraintEnd_toEndOf="@+id/et_password"
        app:layout_constraintStart_toStartOf="@+id/et_password"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        tools:text="password validation" />

    <TextView
        android:id="@+id/tv_password_confirmation_validation_mesage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btn_send_register_request"
        app:layout_constraintEnd_toEndOf="@+id/et_password_confirmation"
        app:layout_constraintStart_toStartOf="@+id/et_password_confirmation"
        app:layout_constraintTop_toBottomOf="@+id/et_password_confirmation"
        tools:text="password confirmation validation" />
</androidx.constraintlayout.widget.ConstraintLayout>